feat: eureka client config

--- a/all/服务注册与发现.md
+++ b/all/服务注册与发现.md
@@ -1,20 +1,23 @@
 ### 话不多说前言
-![image](http://image.bubuko.com/info/201805/20180507213015932258.png)
+![image](https://github.com/WayneZeng/gitbook-ms-framework/blob/master/asset/image/register-center.png?raw=true)
+
 (图片来自：http://www.bubuko.com)
 
 - 服务提供者，到注册中心说：“我可以用，客观里面请”
 - 服务消费者，到注册中心问：“哪个服务可以用，信息送到我的房里来”
-- 注册通过心跳检测完成服务可用性校验，就是定期到服务提供者那里查房，有变更通知一下消费者，就是个老鸨的角色呗。
+- 注册通过心跳检测完成服务可用性校验，就是定期到服务提供者那里查房，有变更通知一下消费者，简而言之，就是个老鸨的角色呗。
 
 ### 书中自有黄金屋
 
-- 恭喜你看完了前言
-- 客官，【支付宝扫码】奖励自己一下呗
+- 客官,你看完了前言,如此优秀
+- 【支付宝扫码】奖励自己一下，后面还有。
+
+![image](https://github.com/WayneZeng/gitbook-ms-framework/blob/master/asset/common/alipay_redpacket.jpeg?raw=true)
 
 ### Eureka Server
-- 部署分为服务端和客户端
-- 国内很多教程没有更新出现使用错误，通过这个网站的资料解决了
-(https://www.baeldung.com/spring-cloud-netflix-eureka)
+- Eureka在springcloud中充当服务注册功能，相当于Dubbo+zk里面得zk，部署分为服务端和客户端
+- 国内很多教程没有更新出现使用错误，通过[baeldung网站](https://www.baeldung.com/spring-cloud-netflix-eureka)的资料解决
+
 
 - 依赖
 
@@ -28,7 +31,7 @@
 
 - 启动类注解
 
-```
+```java
 @SpringBootApplication
 @EnableEurekaServer
 public class EServerApplication {
@@ -58,73 +61,53 @@ eureka.client.fetch-registry=false
 ```
 浏览器访问： http://localhost:10007/
 ```
+![如图](./../asset/image/euraka-sever.jpeg)
+
 
 ### Eureka Client
 - 服务本身也是一个client
 - 依赖
 
 ```
-<dependency>
-    <groupId>org.springframework.cloud</groupId>
-    <artifactId>spring-cloud-starter-netflix-eureka-starter</artifactId>
-    <version>2.0.2.RELEASE</version>
-</dependency>
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-web</artifactId>
-    <version>2.0.1.RELEASE</version>
-</dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>2.0.1.RELEASE</version>
+    </dependency>
 ```
 
 - 启动类
 
 ```java
-@SpringBootApplication
-@RestController
-public class EurekaClientApplication implements GreetingController {
- 
-    @Autowired
-    @Lazy
-    private EurekaClient eurekaClient;
- 
-    @Value("${spring.application.name}")
-    private String appName;
- 
-    public static void main(String[] args) {
-        SpringApplication.run(EurekaClientApplication.class, args);
-    }
- 
-    @Override
-    public String greeting() {
-        return String.format("Hello from '%s'!", eurekaClient.getApplication(appName).getName());
-    }
-}
+       @SpringBootApplication
+       @EnableEurekaClient
+       public class EurekaClientApplication {
+       
+         public static void main(String[] args) {
+           SpringApplication.run(EurekaClientApplication.class, args);
+         }
+       }
 ```
-- controller
-
-```
-public interface GreetingController {
-    @RequestMapping("/greeting")
-    String greeting();
-}
-```
-
 
 - 配置
 
 ```
-spring:
-  application:
-    name: spring-cloud-eureka-client
-server:
-  port: 0
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:10007/eureka}
-  instance:
-    preferIpAddress: true
+server.port=10008
+
+spring.application.name=eclient
+
+eureka.client.serviceUrl.defaultZone=http://localhost:10007/eureka
+
 ```
+
+### 高级功能
+
+
+### 源码分析
 
 
 
