--- a/all/数据存储.md
+++ b/all/数据存储.md
@@ -10,9 +10,45 @@
 * 第三层持久层，nosql，sql，文件系统分别用于存非结构数据，结构数据，文件
 * 消息中间件，用于处理异步任务
 
-### 三级缓存架构（todo）
+### 三级缓存架构
+* 通常三级缓存：nginx本地缓存+Memcache/redis分布式缓存+tomcat堆缓存
 
-[推荐阅读](https://www.cnblogs.com/panchanggui/p/9503666.html)
+* nginx本地缓存配置
+```text
+# /path/to/cache 本地路径，用来设置Nginx缓存资源的存放地址
+proxy_cache_path /path/to/cache levels=1:2 keys_zone=key_zone_my:10m max_size=10g inactive=60m use_temp_path=off;
+server {
+　　# ...
+　　location / {
+      # proxy_cache 启用proxy cache，并指定key_zone。
+　　　　proxy_cache key_zone_my;
+　　　　proxy_pass http://stream_XX;
+　　}
+}
+```
+
+如果部分不希望使用缓存，可增加条件
+```text
+proxy_no_cache $cookie_nocache $arg_nocache$arg_comment;
+proxy_no_cache $http_pragma    $http_authorization;
+```
+
+* Memcache/redis分布式缓存
+
+ps：memcache和redis区别是常见面试题...
+
+```text
+Memcached 是一个高性能，分布式内存对象缓存系统，通过在内存里维护一个统一的巨大的 Hash 表
+简单的说就是将数据调用到内存中，然后从内存中读取，从而大大提高读取速度。
+```
+
+* tomcat堆缓存
+```text
+tomcat中的堆也可以缓存一定的数据, 前面缓存崩溃后的最后一道防线
+```
+
+
+[推荐阅读(有点长)](https://www.cnblogs.com/panchanggui/p/9503666.html)
 
 ### 数据库连接池化技术
 
@@ -73,7 +109,7 @@ spring.datasource.druid.stat-view-servlet.deny=
 spring.datasource.druid.aop-patterns= # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
 ```
 
-
+这一篇就到这里了，好浮于表面，都不要意思要打赏，以后完善吧。
 
 
 
