feat: format my book

--- a/all/服务注册与发现.md
+++ b/all/服务注册与发现.md
@@ -10,7 +10,7 @@
 ### 书中自有黄金屋
 
 - 客官,你看完了前言,如此优秀
-- 【支付宝扫码】奖励自己一下，后面还有。
+- 【支付宝扫码领红包】奖励自己一下，后面还有。
 
 ![image](https://github.com/WayneZeng/gitbook-ms-framework/blob/master/asset/common/alipay_redpacket.jpeg?raw=true)
 
@@ -61,7 +61,8 @@ eureka.client.fetch-registry=false
 ```
 浏览器访问： http://localhost:10007/
 ```
-![如图](./../asset/image/euraka-sever.jpeg)
+
+![如图](./../asset/image/euraka-server.jpeg)
 
 
 ### Eureka Client
