--- a/all/配置中心.md
+++ b/all/配置中心.md
@@ -99,7 +99,7 @@ public class ConfigController {
 返回信息包含配置中心的配置。说明成功。
 
 
-### 进阶（todo）
+### 进阶
 
 * 从启动类注解 @EnableConfigServer 跳转进入
 
@@ -114,6 +114,7 @@ public class ConfigServerConfiguration {
 	}
 }
 ```
+
 可以看到 这里并没有太多Bean的装备，Marker被ConfigServerAutoConfiguration引用
 
 ```java
@@ -140,6 +141,7 @@ public class ConfigServerAutoConfiguration {
 public class EnvironmentRepositoryConfiguration {
 }
 ```
+
 这里引入了新的配置类，可以看到其支持的配置方式
   - svn
   - jdbc
@@ -157,6 +159,7 @@ class GitRepositoryConfiguration extends DefaultRepositoryConfiguration {
 ```
 
 * 可以看到其继承的是默认配置项DefaultRepositoryConfiguration
+
 ```java
 @Configuration
 @ConditionalOnMissingBean(value = EnvironmentRepository.class, search = SearchStrategy.CURRENT)
@@ -185,6 +188,7 @@ class DefaultRepositoryConfiguration {
 ![如图](./../asset/image/config-env.jpeg)
 
 * 其中核心是实现了基类中的findOne方法，在MultipleJGitEnvironmentRepository的实现如下
+
 ```java
 	@Override
 	public Environment findOne(String application, String profile, String label) {
@@ -229,9 +233,10 @@ class DefaultRepositoryConfiguration {
 
 * 而返回的 Environment，就是我们客户端获取的配置数据的结构。
 
-这一篇就到这里了, [本文示例源码github](https://github.com/WayneZeng/springcloud-demo)
-喜欢请打赏5毛买包辣条
+这一篇就到这里了， [本文示例源码github](https://github.com/WayneZeng/springcloud-demo)
 
-![客观常来啊](./../asset/image/alipay.jpeg)
+喜欢请打赏5毛买包狗粮
+
+![image](./../asset/common/alipay.jpeg)
 
 
